nav bar and buttons

--- a/home.html
+++ b/home.html
@@ -7,5 +7,15 @@
 </head>
 <body>
     <h2>Wellcom</h2>
+
+<div>
+    <nav>
+        <table>
+            <th>Home</th>
+            <th><button class="btn">About</button></th>
+            <th><button class="btn">some thing</button></th>
+        </table>
+    </nav>
+</div>
 </body>
 </html>
