--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h2>Wellcom</h2>
@@ -11,7 +12,7 @@
 <div>
     <nav>
         <table>
-            <th>Home</th>
+            <th class="thead">Home</th>
             <th><button class="btn">About</button></th>
             <th><button class="btn">some thing</button></th>
         </table>
