--- a/home.html
+++ b/home.html
@@ -12,11 +12,12 @@
 <div>
     <nav>
         <table>
-            <th class="thead">Home</th>
-            <th><button class="btn">About</button></th>
-            <th><button class="btn">some thing</button></th>
+            <th class="thead"><h3>Home</h3></th>
+            <th><button id="btnA">About</button></th>
+            <th><button>some thing</button></th>
         </table>
     </nav>
 </div>
+<script src="index.js" defer></script>
 </body>
 </html>
