--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,11 +12,15 @@
     <div>
         <nav>
             <table>
-                <th class="thead"><button id="btnB">Home</button></th>
-                <th><h3>About</h3></th>
+                <th><h3 class="thead">About</h3></th>
+                <th><button id="btnB">Home</button></th>
+               
                 <th><button >some thing</button></th>
             </table>
         </nav>
+    </div>
+    <div class="para">
+        <p>About world!</p>
     </div>
     <script src="index.js" defer></script>
 </body>
