--- a/home.html
+++ b/home.html
@@ -18,6 +18,9 @@
         </table>
     </nav>
 </div>
+<div class="para">
+    <p>Hello world!</p>
+</div>
 <script src="index.js" defer></script>
 </body>
 </html>
