--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
         <table>
             <th class="thead"><h3>Home</h3></th>
             <th><button id="btnA">About</button></th>
-            <th><button>some thing</button></th>
+            <th><button id="btnC">some thing</button></th>
         </table>
     </nav>
 </div>
