--- a/3thPage.html
+++ b/3thPage.html
@@ -20,8 +20,8 @@
             </table>
         </nav>
     </div>
-    <div class="para">
-        <p>Some Thing</p>
+    <div>
+        <p class="para" onmouseover="changeColor()" onmouseout="resetColor()">Some Thing</p>
     </div>
     <script src="index.js" defer></script>
 </body>
