--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
             </table>
         </nav>
     </div>
-    <div class="para">
-        <p>About world!</p>
+    <div>
+        <p class="para" onmouseover="changeColor()" onmouseout="resetColor()">About world!</p>
     </div>
     <script src="index.js" defer></script>
 </body>
