--- a/home.html
+++ b/home.html
@@ -18,8 +18,8 @@
         </table>
     </nav>
 </div>
-<div class="para">
-    <p>Hello world!</p>
+<div >
+    <p class="para" onmouseover="changeColor()" onmouseout="resetColor()">Hello world!</p>
 </div>
 <script src="index.js" defer></script>
 </body>
