--- a/home.html
+++ b/home.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h2>Wellcom</h2>
 
-<div>
-    <nav>
-        <table>
-            <th class="thead"><h3>Home</h3></th>
-            <th><button id="btnA">About</button></th>
-            <th><button id="btnC">some thing</button></th>
-        </table>
-    </nav>
-</div>
-<div >
-    <p class="para" onmouseover="changeColor()" onmouseout="resetColor()">Hello world!</p>
-</div>
-<script src="index.js" defer></script>
+    <div>
+        <nav>
+            <table>
+                <th class="thead">
+                    <h3>Home</h3>
+                </th>
+                <th><button id="btnA">About</button></th>
+                <th><button id="btnC">some thing</button></th>
+            </table>
+        </nav>
+    </div>
+    <div>
+        <p class="para" onmouseover="changeColor()" onmouseout="resetColor()">Hello world!</p>
+    </div>
+    <div>
+        <button class="homeBtn">best method!</button>
+        <span class="homeSp">Text</span>
+    </div>
+    <script src="index.js" defer></script>
 </body>
+
 </html>
